k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backtest-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backtest
  template:
    metadata:
      labels:
        app: backtest
    spec:
      containers:
        - name: backtest
          image: <IMAGE>
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
