k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backtest-svc
spec:
  selector:
    app: backtest
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
